# py-llm-gen

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  project_description.md  pyproject.toml  pytest.ini  test_db_connection.py
docs/: database_migrations.md
src/: main.py
src/api/: main.py  routes.py
src/application/: use_cases.py
src/application/dto/: base.py  client.py  equipment.py  offer.py  request.py  user.py
src/application/use_cases/: base.py
src/application/use_cases/client/commands/: create_client.py  delete_client.py  update_client.py
src/application/use_cases/client/queries/: get_client.py  list_clients.py
src/application/use_cases/equipment/commands/: create_equipment.py  delete_equipment.py  update_equipment.py
src/application/use_cases/equipment/queries/: get_equipment.py  list_equipment.py
src/application/use_cases/offer/commands/: create_offer.py  delete_offer.py  update_offer.py
src/application/use_cases/offer/queries/: get_offer.py  list_offers.py
src/application/use_cases/request/commands/: create_request.py  delete_request.py  update_request.py
src/application/use_cases/request/queries/: get_request.py  list_requests.py
src/application/use_cases/user/commands/: create_user.py  delete_user.py  (+1 more)
src/domain/: entities.py
src/domain/entities/: __init__.py  base.py  client.py  equipment.py  offer.py  request.py  user.py
src/domain/repositories/: base.py
src/infrastructure/: config.py  database.py
src/infrastructure/database/: alembic.ini  config.py  models.py  session.py
src/infrastructure/database/migrations/: README.md  env.py
src/infrastructure/database/scripts/: populate_db.py
src/infrastructure/di/: container.py  dependencies.py
src/infrastructure/repositories/: base_sql.py  client.py  equipment.py  factory.py  offer.py  request.py  user.py
src/interface/api/: app.py  dependencies.py
src/interface/api/routes/: client.py  equipment.py  offer.py  request.py  user.py
tests/: conftest.py  test_health.py
(+4 files in other folders)
